refactor: migrate String.format to String.formatted (Java 15+) (#1091)
* refactor: migrate String.format to String.formatted (Java 15+)

Motivation:
Java 15 introduced String.formatted() as an instance method counterpart
to String.format(), providing cleaner and more readable string formatting.

Modification:
Replace String.format("literal", args) with "literal".formatted(args)
across 14 files including HTTP server examples, test files, and
the SimpleServerApp.

Result:
More concise and idiomatic Java code leveraging Java 15+ API.

* style: apply javafmt to fix Checks failure

Apply javafmt to 5 test files that were failing code style check.