@@ -69,8 +69,7 @@ public class HandlerExampleDocTest extends JUnitJupiterRouteTest {
               method ->
                   extractUri(
                       uri ->
-                          complete(
-                              String.format("This was a %s request to %s", method.name(), uri))));
+                          complete("This was a %s request to %s".formatted(method.name(), uri))));
 
       Route handlerResponse =
           extractMethod(
@@ -81,7 +80,7 @@ public class HandlerExampleDocTest extends JUnitJupiterRouteTest {
                         final HttpResponse response =
                             HttpResponse.create()
                                 .withEntity(
-                                    String.format("Accepted %s request to %s", method.name(), uri))
+                                    "Accepted %s request to %s".formatted(method.name(), uri))
                                 .withStatus(StatusCodes.ACCEPTED);
                         return complete(response);
                       }));
